syntax = "proto3";

option csharp_namespace = "AuthMicroservice.ProtoServices";

package services;

service JwtAuthGrpcService {
	rpc Register(RegisterRequest) returns (LoginResponse);
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc IsValidToken(ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
	string username = 1;
	string password = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	string token = 1;
}

message ValidateRequest {
	string token = 1;
}

message ValidateResponse {
	bool valid = 1;
}